Set header and footer to fixed positions on page instead of leaving random whitespace

--- a/style.css
+++ b/style.css
@@ -9,14 +9,24 @@ body {
 }
 
 .main-header {
-  background-color: rgba(0, 0, 0, 0.3);
-  padding-bottom: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  height: 100px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
   text-align: center;
   margin: 0;
-  font-size: 5em;
+  font-size: 4em;
   font-family: "Helvetica";
   font-weight: normal;
   color: white;
@@ -55,13 +65,21 @@ body {
 .footer {
   display: flex;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.3);
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
   padding: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  height: 60px;
+  box-sizing: border-box;
 }
 
 button {
   text-align: center;
-  background-color: #666;
+  background-color: #555;
   border: none;
   padding-left: 10px;
   padding-right: 10px;
